# y5fgb

./: .dockerignore  .env.production.example  .gitignore  README.md  docker-compose.ip.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  install.ps1  install.sh  package-lock.json  package.json  playwright.config.ts
apps/client-desktop/src-tauri/: Cargo.toml  tauri.beta.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
apps/client-desktop/src-tauri/capabilities/: default.json
apps/client-desktop/src-tauri/src/: main.rs
desktop-workspace/: README.md
docs/: admin-guide.md  browser-security-model.md  bug-triage-template.md  client-storage-model.md  deployment-web-architecture.md  desktop-auto-update.md  desktop-release-runbook.md  dev-guide.md  frontend-layering.md  product-web-foundation.md  production-runbook.md  qa-matrix-rc1.md  release-checklist-1.0.0-rc.1.md  release-notes-1.0.0-rc.1.md  security-boundaries.md  session-model.md  threat-model-v1.md  transport-lifecycle.md  user-guide.md  web-readiness.md  windows-installer-runbook.md
infra/: docker-compose.dev.yml
scripts/: check-boundaries.mjs  deploy-prod.ps1  deploy-prod.sh  dev-down.ps1  dev-down.sh  dev-up.ps1  dev-up.sh  generate-updater-manifest.mjs  install.ps1  install.sh  migrate-down.ps1  migrate-down.sh  migrate-up.ps1  migrate-up.sh  plugin-unit-checks.mjs  release-rc.ps1  release-rc.sh  release-sanity.mjs  run-client.ps1  run-client.sh  run-server.ps1  run-server.sh  smoke-v4.mjs  smoke-v4.ps1  smoke-v4.sh  windows-installer.mjs
(+211 files in other folders)
