[package]
name = "client-desktop"
version = "1.0.0-rc.1"
description = "Secure messenger desktop client shell"
authors = ["Project Team"]
license = "SEE LICENSE IN ../../LICENSE"
repository = "https://github.com/example/secure-messenger"
homepage = "https://github.com/example/secure-messenger"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
keyring = "2.3.3"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
